--- a/SNL/SNL.vcxproj
+++ b/SNL/SNL.vcxproj
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="functions.cpp" />
+    <ClCompile Include="LL1.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="RD.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
