--- a/SNL/SNL.vcxproj.filters
+++ b/SNL/SNL.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClCompile Include="functions.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SemanticAnalysis.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="head.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SemanticAnalysis.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
