--- a/SNL/SNL.vcxproj
+++ b/SNL/SNL.vcxproj
@@ -144,10 +144,12 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RD.cpp" />
     <ClCompile Include="SemanticAnalysis.cpp" />
+    <ClCompile Include="test_LexicalAnalysis.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="func_statement.h" />
     <ClInclude Include="global_var.h" />
+    <ClInclude Include="LexicalAnalysis.h" />
     <ClInclude Include="SemanticAnalysis.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
