--- a/SNL/SNL.vcxproj
+++ b/SNL/SNL.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="func_statement.h" />
     <ClInclude Include="global_var.h" />
+    <ClInclude Include="treenode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
