--- a/SNL/SNL.vcxproj.filters
+++ b/SNL/SNL.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="func_statement.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="treenode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
