--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,9 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# VS 2019
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.users
