--- a/SNL/SNL.vcxproj.filters
+++ b/SNL/SNL.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="test_LexicalAnalysis.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="global_var.h">
@@ -30,6 +33,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="treenode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="LexicalAnalysis.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
